--- a/grade10.html
+++ b/grade10.html
@@ -237,7 +237,7 @@
   Sistem persamaan linear tiga variabel dapat diselesaikan dengan menggunakan serangkaian langkah untuk mengeliminasi variabel.<br>
   Ilustrasi dari penyelesaian sistem persamaan tiga variabel dapat dilihat pada video berikut.<br><br>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe style="display: block; margin: auto;" width="990" height="557" src="https://www.youtube.com/embed/JVANLCfV70w" title="Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JVANLCfV70w" title="Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </iframe>
   </div><br>
   Berikut adalah latihan soal sistem persamaan linear tiga variabel.
