--- a/grade10.html
+++ b/grade10.html
@@ -236,7 +236,7 @@
   dimana \(a_{ij} \in \mathrm{R}, b_i \in \mathrm{R}, a_{ij}\) tidak semuanya nol, untuk \(i,j=1, 2, 3\).<br>
   Sistem persamaan linear tiga variabel dapat diselesaikan dengan menggunakan serangkaian langkah untuk mengeliminasi variabel.<br>
   Ilustrasi dari penyelesaian sistem persamaan tiga variabel dapat dilihat pada video berikut.<br><br>
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-4by3">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JVANLCfV70w" title="Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </iframe>
   </div><br>
@@ -271,8 +271,8 @@
     <li>Membuat kesimpulan dari penyelesaian sistem persamaan</li>
   </ul>
   Ilustrasi dari penyelesaian masalah kontekstual dengan menggunakan sistem persamaan tiga variabel dapat dilihat pada video berikut.<br><br>
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe style="display: block; margin: auto;" width="990" height="557" src="https://www.youtube.com/embed/QgnXXdTq2WU" title="Menyelesaikan Masalah Kontekstual Menggunakan Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <div class="embed-responsive embed-responsive-4by3">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QgnXXdTq2WU" title="Menyelesaikan Masalah Kontekstual Menggunakan Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </iframe>
   </div><br>
   Untuk lebih memahami materi ini, klik tombol berikut untuk mengerjakan kuis.
