--- a/grade10.html
+++ b/grade10.html
@@ -272,7 +272,7 @@
   </ul>
   Ilustrasi dari penyelesaian masalah kontekstual dengan menggunakan sistem persamaan tiga variabel dapat dilihat pada video berikut.<br><br>
   <div class="embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QgnXXdTq2WU" title="Menyelesaikan Masalah Kontekstual Menggunakan Sistem Persamaan Linear Tiga Variabel" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QgnXXdTq2WU" title="Menyelesaikan Masalah Kontekstual Menggunakan Sistem Persamaan Linear Tiga Variabel" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </iframe>
   </div><br>
   Untuk lebih memahami materi ini, klik tombol berikut untuk mengerjakan kuis.
